Rota para adicionar um jogo ao jogador feita
